<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:backgroundTint="#E9000000"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#EB000000"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bclear"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="#FD4444"
                android:text="@string/clear"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <Button
                android:id="@+id/startpara"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:backgroundTint="#E1000000"
                android:text="("
                android:textColor="#D3FFFFFF"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <Button
                android:id="@+id/endpara"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="0"
                android:backgroundTint="#E1000000"
                android:text=")"
                android:textColor="#D3FFFFFF"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <Button
                android:id="@+id/bdiv"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="0"
                android:backgroundTint="#E1000000"
                android:text="@string/div"
                android:textColor="#D3FFFFFF"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bseven"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="#E1000000"
                android:text="@string/seven"
                android:textColor="#D3FFFFFF"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <Button
                android:id="@+id/beight"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="#E1000000"
                android:text="@string/eight"
                android:textColor="#D3FFFFFF"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <Button
                android:id="@+id/bnine"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="#E1000000"
                android:text="@string/nine"
                android:textColor="#D3FFFFFF"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <Button
                android:id="@+id/bmul"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="#E1000000"
                android:text="@string/mul"
                android:textColor="#D3FFFFFF"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bfour"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="#E1000000"
                android:text="@string/four"
                android:textColor="#D3FFFFFF"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <Button
                android:id="@+id/bfive"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="#E1000000"
                android:text="@string/five"
                android:textColor="#D3FFFFFF"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <Button
                android:id="@+id/bsix"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="#E1000000"
                android:text="@string/six"
                android:textColor="#D3FFFFFF"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <Button
                android:id="@+id/bsub"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="#E1000000"
                android:text="@string/sub"
                android:textColor="#D3FFFFFF"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bone"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="#E1000000"
                android:text="@string/one"
                android:textColor="#D3FFFFFF"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <Button
                android:id="@+id/btwo"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="#E1000000"
                android:text="@string/two"
                android:textColor="#D3FFFFFF"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <Button
                android:id="@+id/bthree"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="#E1000000"
                android:text="@string/three"
                android:textColor="#D3FFFFFF"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <Button
                android:id="@+id/badd"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="#E1000000"
                android:text="@string/add"
                android:textColor="#D3FFFFFF"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bdot"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="0"
                android:backgroundTint="#E1000000"
                android:text="@string/decimal"
                android:textColor="#D3FFFFFF"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <Button
                android:id="@+id/bzero"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="0"
                android:backgroundTint="#E1000000"
                android:text="@string/zero"
                android:textColor="#D3FFFFFF"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />

            <Button
                android:id="@+id/bequal"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:backgroundTint="#000000"
                android:text="@string/equals"
                android:textColor="#FD4444"
                android:textSize="24sp"
                app:cornerRadius="1000dp" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/input"
        android:layout_width="366dp"
        android:layout_height="66dp"
        android:layout_marginBottom="122dp"
        android:ems="10"
        android:hint="ENTER VALUE HERE"
        android:inputType="textPersonName"
        android:textAlignment="textEnd"
        android:textColor="#EEFFFFFF"
        android:textColorHint="#C1535252"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.322" />

    <TextView
        android:id="@+id/output"
        android:layout_width="360dp"
        android:layout_height="64dp"
        android:textAlignment="viewEnd"
        android:textColor="#E1FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />


</androidx.constraintlayout.widget.ConstraintLayout>